Fixes console reporting

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                             console.log("SUCCESS  data: "+JSON.stringify(data));
                         },
                         error: function(jqxhr, data) {
-                            console.log("ERROR jqxhr:"+JSON.stringify(jqxhr)+ "  data:"+JSON.strinify(data));
+                            console.log("ERROR jqxhr:"+JSON.stringify(jqxhr)+ "  data:"+JSON.stringify(data));
                         },
                         complete: function(jqxhr, data) {
-                            console.log("COMPLETE jqxhr:"+JSON.stringify(jqxhr)+ "  data:"+JSON.strinify(data));
+                            console.log("COMPLETE jqxhr:"+JSON.stringify(jqxhr)+ "  data:"+JSON.stringify(data));
                         }
                     }
                     // $.ajax(ajaxOpts);
