Further revisions to the postapi

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     postapiUrl: "http://example2.com:8080/concord/js/other/postapi/api.html",
                     oauthAuthorizationUrl : "http://example2.com:8080/concord/oauth/authorize.sp",
                     oauthTokenUrl : "http://example2.com:8080/concord/oauth/token.sp",
-                    oauthClientId : "my-trusted-client"
+                    oauthClientId : "b4551a54-5de5-4c19-8631-0fea5a21560e",
+                    oauthClientSecret : "secret"
                 });
                 
                 $("#doit").click(function(evt) {
